feat: [#134] error pages

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -22,3 +22,4 @@
 @import './views/contact.css';
 @import './views/logs.css';
 @import './views/log-article.css';
+@import './views/error-page.css';
